@@ -1,10 +1,12 @@
 package org.github.fourth.leetcode;
 
 import org.github.fourth.leetcode.common.TreeNode;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -18,13 +20,21 @@ class LeetCode_098_isValidBSTTest {
     //    @ParameterizedTest
     @MethodSource("generateRightCase")
     public void test01(TreeNode root, boolean expectedResult) {
-        boolean actResult = leetCode098IsValidBST.isValidBST(root);
+        boolean actResult = leetCode098IsValidBST.isValidBST01(root);
+        Assertions.assertEquals(expectedResult, actResult);
+    }
+
+    //    @ParameterizedTest
+    @MethodSource("generateRightCase")
+    public void test02(TreeNode root, boolean expectedResult) {
+        boolean actResult = leetCode098IsValidBST.isValidBST02(root);
+        Assertions.assertEquals(expectedResult, actResult);
     }
 
     public static Stream<Arguments> generateRightCase() {
         return Stream.of(
                 arguments(TreeNode.build(List.of(2, 1, 3)), true),
-                arguments(TreeNode.build(List.of(5, 1, 4, null, null, 3, 6)), false)
+                arguments(TreeNode.build(Arrays.asList(5, 1, 4, null, null, 3, 6)), false)
         );
     }
 }
