@@ -1,10 +1,12 @@
 package org.github.fourth.leetcode;
 
 import org.github.fourth.leetcode.common.TreeNode;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -17,14 +19,21 @@ class LeetCode_101_isSymmetricTest {
 
     //    @ParameterizedTest
     @MethodSource("generateRightCase")
-    public void test01(TreeNode root, TreeNode expectedResult) {
-        boolean actResult = leetCode101IsSymmetric.isSymmetric(root);
+    public void test01(TreeNode root, boolean expectedResult) {
+        boolean actResult = leetCode101IsSymmetric.isSymmetric01(root);
+        Assertions.assertEquals(expectedResult, actResult);
+    }
+    //    @ParameterizedTest
+    @MethodSource("generateRightCase")
+    public void test02(TreeNode root, boolean expectedResult) {
+        boolean actResult = leetCode101IsSymmetric.isSymmetric02(root);
+        Assertions.assertEquals(expectedResult, actResult);
     }
 
     public static Stream<Arguments> generateRightCase() {
         return Stream.of(
                 arguments(TreeNode.build(List.of(1, 2, 2, 3, 4, 4, 3)), true),
-                arguments(TreeNode.build(List.of(1, 2, 2, null, 3, null, 3)), false)
+                arguments(TreeNode.build(Arrays.asList(1, 2, 2, null, 3, null, 3)), false)
         );
     }
 
