@@ -1,11 +1,12 @@
 package org.github.fourth.leetcode;
 
 import org.github.fourth.leetcode.common.TreeNode;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.params.provider.Arguments.arguments;
@@ -17,13 +18,21 @@ class LeetCode_104_maxDepthTest {
     //    @ParameterizedTest
     @MethodSource("generateRightCase")
     public void test01(TreeNode root, int expectedResult) {
-        int actResult = leetCode104MaxDepth.maxDepth(root);
+        int actResult = leetCode104MaxDepth.maxDepth01(root);
+        Assertions.assertEquals(expectedResult, actResult);
+    }
+
+    //    @ParameterizedTest
+    @MethodSource("generateRightCase")
+    public void test02(TreeNode root, int expectedResult) {
+        int actResult = leetCode104MaxDepth.maxDepth02(root);
+        Assertions.assertEquals(expectedResult, actResult);
     }
 
     public static Stream<Arguments> generateRightCase() {
         return Stream.of(
-                arguments(TreeNode.build(List.of(3, 9, 20, null, null, 15, 7)), 3),
-                arguments(TreeNode.build(List.of(1, null, 2)), 2)
+                arguments(TreeNode.build(Arrays.asList(3, 9, 20, null, null, 15, 7)), 3),
+                arguments(TreeNode.build(Arrays.asList(1, null, 2)), 2)
         );
     }
 }
