@@ -1,10 +1,12 @@
 package org.github.fourth.leetcode;
 
 import org.github.fourth.leetcode.common.TreeNode;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -18,13 +20,21 @@ class LeetCode_110_isBalancedTest {
     //    @ParameterizedTest
     @MethodSource("generateRightCase")
     public void test01(TreeNode root, boolean expectedResult) {
-        boolean actResult = leetCode110IsBalanced.isBalanced(root);
+        boolean actResult = leetCode110IsBalanced.isBalanced01(root);
+        Assertions.assertEquals(expectedResult, actResult);
+    }
+
+    //    @ParameterizedTest
+    @MethodSource("generateRightCase")
+    public void test02(TreeNode root, boolean expectedResult) {
+        boolean actResult = leetCode110IsBalanced.isBalanced02(root);
+        Assertions.assertEquals(expectedResult, actResult);
     }
 
     public static Stream<Arguments> generateRightCase() {
         return Stream.of(
-                arguments(TreeNode.build(List.of(3, 9, 20, null, null, 15, 7)), true),
-                arguments(TreeNode.build(List.of(1, 2, 2, 3, 3, null, null, 4, 4)), false),
+                arguments(TreeNode.build(Arrays.asList(3, 9, 20, null, null, 15, 7)), true),
+                arguments(TreeNode.build(Arrays.asList(1, 2, 2, 3, 3, null, null, 4, 4)), false),
                 arguments(TreeNode.build(List.of()), true)
         );
     }
